# bot_btc_1hr_kalshi

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  cloudbuild.yaml  pyproject.toml
config/: dev.yaml  live.yaml  paper.yaml  prod.yaml
deploy/: Dockerfile  bq_schema.json  cloudrun.yaml  env.example.yaml  setup_gcp.sh
docs/: DEPLOYMENT.md  DESIGN.md  RISK.md  RUNBOOK.md
scripts/: _common.sh  binance_public_data_backfill.py  capture_kalshi_frames.py  check_clock_usage.py  debug_kalshi_auth.py  debug_kalshi_book.py  fetch_ticks.sh  flatten.sh  halt.sh  prune_logs.sh  query_bets.sh  resume.sh  start.sh  status.sh  stop.sh  tier1_override.sh  view_logs.sh
src/bot_btc_1hr_kalshi/: __init__.py  __main__.py  app.py  feedloop.py
src/bot_btc_1hr_kalshi/admin/: __init__.py  auth.py  routes.py  server.py
src/bot_btc_1hr_kalshi/archive/: __init__.py  format.py  reader.py  writer.py
src/bot_btc_1hr_kalshi/calendar/: __init__.py  events.py  forex_factory.py  guard.py  loader.py
src/bot_btc_1hr_kalshi/config/: __init__.py  loader.py  settings.py
src/bot_btc_1hr_kalshi/execution/: __init__.py  oms.py  reconciler.py
src/bot_btc_1hr_kalshi/execution/broker/: __init__.py  base.py  kalshi.py  kalshi_signer.py  paper.py  shadow.py
src/bot_btc_1hr_kalshi/market_data/: __init__.py  bars.py  book.py  derivatives_oracle.py  kalshi_rest.py  spot_oracle.py  types.py
src/bot_btc_1hr_kalshi/monitor/: __init__.py  position_monitor.py
src/bot_btc_1hr_kalshi/obs/: __init__.py  activity.py  clock.py  lifecycle.py  logging.py  money.py  schemas.py
src/bot_btc_1hr_kalshi/portfolio/: __init__.py  positions.py
src/bot_btc_1hr_kalshi/research/: __init__.py  backtest.py  backtest_cli.py  divergence.py  replay.py  walkforward.py
src/bot_btc_1hr_kalshi/risk/: __init__.py  breaker_store.py  breakers.py  check.py  clock_drift.py  kelly.py
src/bot_btc_1hr_kalshi/signal/: __init__.py  edge_model.py  features.py  indicators.py  integrity.py  registry.py  types.py
tests/: conftest.py
tests/fixtures/: coinglass_heatmap_sample.json  coinglass_oi_sample.json  ff_calendar_sample.json  kalshi_ws_frames.jsonl  whale_alert_sample.json
tests/integration/: test_backtest_cli.py  test_paper_replay.py  test_replay_placeholder.py
tests/unit/: test_activity.py  test_admin.py  test_archive_format.py  test_archive_writer_reader.py  test_backtest_metrics.py  test_bars.py  test_binance_backfill.py  test_breakers.py  test_bybit_feed.py  test_calendar_guard.py  test_calendar_loader.py  test_ceiling_trap.py  test_clock.py  test_clock_drift.py  test_clock_lint.py  test_coinglass.py  test_coinglass_heatmap.py  test_config_loader.py  test_derivatives_oracle.py  test_divergence.py  test_edge_model.py  test_features.py  test_feedloop.py  test_floor_trap.py  test_forex_factory.py  test_hyperliquid_feed.py  test_implied_arb_trap.py  test_indicators.py  test_integrity.py  test_kalshi_broker.py  test_kalshi_exec_parser.py  test_kalshi_exec_stream.py  test_kalshi_feed.py  test_kalshi_parser.py  test_kalshi_rest.py  test_kalshi_signer.py  test_kelly.py  test_l2_book.py  test_lag_trap.py  test_lifecycle.py  (+18 more)
(+22 files in other folders)
