[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "bot_btc_1hr_kalshi"
version = "0.1.0"
description = "BTC 1H Kalshi prediction-market maker — event-driven trader targeting structural mean-reversion with fractional-Kelly sizing."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Shreyas Shivashankar", email = "mail.shreyasgs@gmail.com" }]

dependencies = [
  # Event loop / IO
  "uvloop>=0.19",
  "websockets>=12.0",
  "httpx>=0.27",
  "orjson>=3.10",

  # Data / numerics
  "numpy>=1.26",
  "numba>=0.59",
  "pyyaml>=6.0",

  # Schema / logs
  "pydantic>=2.6",
  "structlog>=24.1",
  "prometheus-client>=0.20",

  # Admin HTTP (auth, halt/resume/flatten/status/tier1_override)
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",

  # GCP
  "google-cloud-logging>=3.9",
  "google-cloud-bigquery>=3.18",
  "google-cloud-secret-manager>=2.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "mypy>=1.9",
  "ruff>=0.3",
  "types-pyyaml>=6.0",
  "freezegun>=1.4",
]

[project.scripts]
bot-btc-1hr-kalshi = "bot_btc_1hr_kalshi.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bot_btc_1hr_kalshi"]

# --- mypy ---------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
  "numba.*",
  "uvloop.*",
  "google.cloud.*",
]
ignore_missing_imports = true

# --- ruff ---------------------------------------------------------------------
[tool.ruff]
line-length = 110
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle / pyflakes
  "I",             # isort
  "N",             # pep8-naming
  "UP",            # pyupgrade
  "B",             # bugbear
  "C4",            # comprehensions
  "SIM",           # simplify
  "RUF",           # ruff-specific
  "ASYNC",         # async lints
  "S",             # bandit (security)
  "T20",           # no print statements in trading code
  "DTZ",           # no naive datetimes
  "TID",           # tidy imports
]
ignore = [
  "E501",          # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**"   = ["S", "N", "DTZ"]
"scripts/**" = ["T20"]

[tool.ruff.format]
quote-style = "double"

# --- pytest -------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
  "integration: tick-replay or broker-mocked end-to-end tests",
  "slow: tests taking > 1s — excluded from default CI run",
]

# --- coverage -----------------------------------------------------------------
[tool.coverage.run]
source = ["src/bot_btc_1hr_kalshi"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
